syntax="proto3";

package ccgobbles_server;
option go_package = "proto/ccgobbles_server";

enum ResponseType {
    SUCCESS = 0;
    FAILURE = 1;
}

message Address {
    string streetNumber = 1;
    string street = 2;
    string city = 3;
    string state = 4;
    string zip = 5;
}

message User {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
    Address address = 5;
}

message MenuItem {
    string name = 1;
    double price = 2;
}

message Restaurant {
    string phone = 1;
    string email = 2;
    string name = 3;
    Address address = 4;
    repeated MenuItem menuitem = 5;
}

message Order {
    string email = 1;
    string restEmail = 2;
    string restPhone = 3;
    repeated OrderItem orderItem = 4;
}

message OrderItem {
    int64 menuId = 1;
    int64 quantity = 2;
}

message RegisterUserRequest {
    User user = 1;
}

message RegisterUserResponse {
    string response = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    bool response = 1;
}

message UpdateUserRequest {
    string oldEmail = 1; 
    User user = 2;
}

message UpdateUserResponse {
    string response = 1;
}

message DeleteUserRequest {
    string email = 1;
}

message DeleteUserResponse {
    string response = 1;
}

message AddRestaurantRequest {
    Restaurant restaurant = 1;
}

message AddRestaurantResponse {
    string response = 1;
}

message AddMenuRequest {
    string restId = 1;
    repeated MenuItem item = 2;
}

message AddMenuResponse {
    ResponseType response = 1;
}

message CreateOrderRequest {
    Order order = 1;
}

message CreateOrderResponse {
    string response = 1;
}


service CCGobbles {
    // Unary API to register user
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {};

    // // Unary API to login user
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {};

    // // Unary API to update user
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {};

    // // Unary API to delete user
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {};

    // // Unary API to add restaurant
    rpc AddRestaurant (AddRestaurantRequest) returns (AddRestaurantResponse) {};

    // // Unary API to add menu
    // rpc AddMenu (AddMenuRequest) returns (AddMenuResponse) {};

    // // Unary API to create orders
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {};
}